test: implementación de test validación de inventario